--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - main
 
 pool:
-  name: Default  
+  name: Default 
 
 variables:
   buildConfiguration: 'Release'
@@ -39,5 +39,5 @@ steps:
   displayName: 'Publish Artifact'
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
+    ArtifactName: 'aspnet-artifact'
     publishLocation: 'Container'
